--- a/app/src/main/res/layout/controller_product_detail.xml
+++ b/app/src/main/res/layout/controller_product_detail.xml
@@ -18,7 +18,7 @@
             android:id="@+id/icon.product"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@drawable/market"
+            android:src="@drawable/ic_placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
