--- a/app/src/main/res/layout/cell_product.xml
+++ b/app/src/main/res/layout/cell_product.xml
@@ -21,7 +21,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/bg_product_icon"
-            tools:src="@drawable/market" />
+            tools:src="@drawable/ic_placeholder" />
 
         <TextView
             android:id="@id/label.product.price"
