--- a/app/src/main/res/layout/cell_product.xml
+++ b/app/src/main/res/layout/cell_product.xml
@@ -6,7 +6,8 @@
     android:layout_width="132dp"
     android:layout_height="176dp"
     android:layout_marginStart="8dp"
-    android:clipChildren="true">
+    android:clipChildren="true"
+    tools:ignore="ContentDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,8 +55,19 @@
             tools:text="Attribute" />
 
     </LinearLayout>
+    
+    <ImageView
+        android:id="@+id/icon.fav"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_margin="@dimen/margin_medium"
+        android:src="@drawable/ic_favorite"
+        app:tint="@color/gold"
+        android:elevation="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <com.example.getirlite.view.components.StickyActionsListItem
+    <com.example.getirlite.view.components.stickactions.StickyActionsListItem
         android:id="@+id/sticky.actions"
         android:layout_width="32dp"
         android:layout_height="96dp"
