--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,47 @@
     <color name="divider">#F2F0FA</color>
     <color name="transparent">#00ffffff</color>
     <color name="bgPrimary">#F2F0FA</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="red">#FF453A</color>
+    <color name="green">#31D058</color>
+    <color name="blueDark">#5C5C5C</color>
+    <color name="plum">#aa41d4</color>
+    <color name="purple">#383880</color>
+    <color name="purpleDark">#232323</color>
+    <color name="gold">#FFCC66</color>
+    <color name="yellow">#fffb00</color>
+    <color name="fuchsia">#FF375F</color>
+    <color name="orange">#FE7000</color>
+    <color name="orangeLight">#EDA754</color>
+    <color name="brown">#A2845E</color>
+    <color name="beige">#dfd7d5</color>
+    <color name="sky">#9FD2F7</color>
+    <color name="skyNight">#2C7CB8</color>
+    <color name="dusk">#FFAFBD</color>
+    <color name="seaBed">#05166C</color>
+    <color name="peach">#FF928B</color>
+    <color name="mint">#00C75A</color>
+    <color name="olive">#E2C943</color>
+    <color name="gray">#9f9f9f</color>
+    <color name="grayDark">#646464</color>
+
+    <color name="txtColorOne">#E8DFCA</color>
+    <color name="txtColorTitle">#F5EFE6</color>
+    <color name="iconColor">#2B4865</color>
+
+    <color name="fillLight">#0dffffff</color>
+    <color name="strokeLight">#26ffffff</color>
+    <color name="fillDark">#0d000000</color>
+    <color name="strokeDark">#26000000</color>
+
+
+    <color name="whiteTransparent">#b5ffffff</color>
+    <color name="whiteExtraTransparent">#61FFFFFF</color>
+    <color name="whiteLessTransparent">#D9FFFFFF</color>
+    <color name="blackTransparent">#D9000000</color>
 </resources>
