--- a/app/src/main/res/layout/component_bottom_bar.xml
+++ b/app/src/main/res/layout/component_bottom_bar.xml
@@ -23,7 +23,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/ic_home_outline"
-            app:tint="@color/gray"/>
+            app:tint="@color/grayDark"/>
 
     </LinearLayout>
 
@@ -44,7 +44,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/ic_search"
-            app:tint="@color/gray"/>
+            app:tint="@color/grayDark"/>
     </LinearLayout>
 
     <LinearLayout
@@ -64,7 +64,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/ic_profile"
-            app:tint="@color/gray"/>
+            app:tint="@color/grayDark"/>
     </LinearLayout>
 
 
